feat: derive the student timetable grid from the teaching calendar
The student schedule grid no longer assumes 13 periods by 5 weekdays. Its rows
are the period numbers the server sent for that teaching week and its columns
are that week's calendar dates, so both sides of the app draw the same grid for
the same calendar. ScheduleController loses FIRST_PERIOD/LAST_PERIOD and the
five-column loops, and its geometry now mirrors rebuildGrid() on the teacher
side, including "no period dictionary means no grid at all".

loadSchedule answers with ScheduleWeekView (a week, not a bare entry list): the
common DTOs carry the dates and the period dictionary, and SocketCourseService
reads the `schedule` object through the same single() helper the teacher service
uses for TeacherScheduleWeekDTO, so a payload that merely looks like a list
cannot slip through. MockCourseService gets the matching calendar fixture: eight
periods, Monday to Friday.

Contract sync: the six test fakes return a week, and the three client test
classes that no suite registers yet (SocketCourseServiceTest, MockCourseServiceTest,
MockCourseScheduleTest) read its entries instead of a bare list. No assertion was
weakened or removed, and ScheduleControllerTest gains the regression that pins the
rows to the dictionary rather than to a constant.

Co-Authored-By: Claude Code <noreply@anthropic.com>