@@ -14,7 +14,7 @@ import model.course.CoursePlanSnapshotView;
 import model.course.CourseTermView;
 import model.course.CourseView;
 import model.course.GradeSummaryView;
-import model.course.ScheduleEntryView;
+import model.course.ScheduleWeekView;
 import model.course.TrainingPlanGroupView;
 import model.course.WaitlistDecision;
 import service.CoursePushListener;
@@ -240,9 +240,10 @@ public final class TrainingPlanControllerTest {
         }
 
         @Override
-        public CompletableFuture<List<ScheduleEntryView>> loadSchedule(
+        public CompletableFuture<ScheduleWeekView> loadSchedule(
                 CourseTermView term, int week) {
-            return CompletableFuture.completedFuture(Collections.emptyList());
+            return CompletableFuture.completedFuture(
+                    new ScheduleWeekView(1, List.of(), List.of(), List.of()));
         }
 
         @Override
